terraform/modules/vpc/igw.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    env = "dev"
    Name = var.stack_name
  }
}
