terraform/modules/vpc/ngw.tf
resource "aws_nat_gateway" "main" {
  count         = length(var.subnet_cidrs.private)
  allocation_id = element(aws_eip.nat.*.id, count.index)
  subnet_id     = element(aws_subnet.public.*.id, count.index)
  depends_on    = [
    aws_internet_gateway.main
  ]
}

resource "aws_eip" "nat" {
  count = length(var.subnet_cidrs.private)
  vpc = true
}
